# Albra

./: .gitignore  ALBRA_TRADING_SYSTEM.md  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CHECKLIST_V2.md  DEPLOYMENT_GUIDE.md  Dockerfile  EC2_MIGRATION_NOTES.md  MULTI_STRATEGY_QUICK_REF.md  PROJECT_GUIDELINES.md  README.md  ZLHMA_DEPLOYMENT_CHECKLIST.md  analyze_btc_detailed.py  analyze_btc_signals.py  analyze_zlmacd_ichimoku.py  check_entry_conditions_simple.py  check_project_status.py  check_status.bat  check_status.py  data_fetcher_1h.py  debug_env.py  debug_november_2024.py  deploy.bat  deploy_v2.bat  diagnose_exit_error.bat  docker-compose.yml  enhanced_walk_forward_hybrid.py  fix_api_keys.py  fix_env_vars.py  portfolio_comparison_analysis.py  pyproject.toml  quick_diagnose.bat  quick_status.bat  requirements.txt  reset_mdd.bat  restart_system.bat  run.py  run_original_backtest.py  setup_claude_code.sh  test_4conditions.py  (+23 more)
.claude/: ANALYSIS_REPORT.md  DEPLOYMENT_NOTES.md  EC2_MIGRATION_COMPLETE.md  EC2_MIGRATION_STATUS.md  ERROR_HISTORY.md  FIXES_APPLIED.md  OLD_EC2_CLEANUP_REPORT.md  PROJECT_STATUS.md  SESSION_LOG.md  SYSTEM_OVERVIEW.md  TODO.md  ZLHMA_ANALYSIS_SESSION.md  settings.local.json
backtest/: CLAUDE_API_SETUP.md  README.md  USAGE_GUIDE.md  __init__.py  test_generated_strategy.py
backtest_modules/: __init__.py  data_fetcher.py  ema_strategy_enhanced.py  ema_volatility_strategy.py  mdd_manager.py  signal_generator.py  signal_generator_hybrid.py  signal_generator_hybrid_debug.py  signal_generator_hybrid_fixed.py  signal_generator_hybrid_flexible.py  (+3 more)
(+182 files in other folders)
