[tool.poetry]
name = "albratrading"
version = "2.0.0"
description = "Professional Binance trading bot with multi-account support"
authors = ["AlbraTrading Team"]
readme = "README.md"
python = "~3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "W", "C90", "I", "N"]